# FC-Filter-Gen-Tool

./: README.md  pyproject.toml
docs/: prd.md  rfc.md
fc_filter_gen/: __init__.py  app.py  cli.py  data_mapper.py  fetch_player_data.py  generated_filters.json  generated_filters_bid.json  input_parser.py  json_generator.py  player_data.json  player_id_mapping.csv
fc_filter_gen/reference_docs/sample_filters/: filters (3).json  filters (4).json  filters (5).json  filters (6).json
fc_filter_gen/reference_docs/sample_inputs/: sample_input.txt
fc_filter_gen/tests/: test_data_mapper.py  test_input_parser.py
